--- a/templates/home.html
+++ b/templates/home.html
@@ -178,11 +178,11 @@ a.nav-link {
                            </li>
                            <li>
                               <h5 class=" description mb-5 wow fadeIn" data-wow-delay="0.4s">
-                                 Search for healthy recipes | 75 recipes
+                                 Search for healthy recipes | {{total_recipes}}  recipes
                               </h5>
                            </li>
                            <hr>
-                           <form action="#" method="get">
+                           <form action="{% url 'home' %}" method="get">
                               <!--Accordion wrapper-->
                               <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
                                  <!-- Accordion card -->
