--- a/templates/home.html
+++ b/templates/home.html
@@ -182,7 +182,7 @@ a.nav-link {
                               </h5>
                            </li>
                            <hr>
-                           <form action="{% url 'home' %}" method="get">
+                           <form action="{% url 'search' %}" method="get">
                               <!--Accordion wrapper-->
                               <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
                                  <!-- Accordion card -->
