--- a/templates/home.html
+++ b/templates/home.html
@@ -226,12 +226,12 @@ a.nav-link {
                                              <label class="form-check-label" for="dessert">Dessert</label>
                                           </div>
                                           <div class="form-check form-check-inline">
-                                             <input type="radio" class="form-check-input" value="on" id="easy" name="easy">
-                                             <label class="form-check-label" for="easy">Easy</label>
+                                             <input type="radio" class="form-check-input" value="on" id="vegan" name="vegan">
+                                             <label class="form-check-label" for="vegan">Vegan</label>
                                           </div>
                                           <div class="form-check form-check-inline">
-                                             <input type="radio" class="form-check-input" value="on" id="hard" name="hard">
-                                             <label class="form-check-labell" for="hard">Hard</label>
+                                             <input type="radio" class="form-check-input" value="on" id="vegetarian" name="vegetarian">
+                                             <label class="form-check-labell" for="vegetarian">Vegetarian</label>
                                           </div>
                                        </div>
                                     </div>
