--- a/templates/detail.html
+++ b/templates/detail.html
@@ -148,9 +148,7 @@
     <footer class="page-footer text-center text-md-left unique-color-dark pt-0">
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">
-        <div class="container-fluid">
-          © 2019 Copyright: <a href="https://www.fiverr.com/selmiabderrahim" target="_blank"> Selmi Abderrahim </a>
-        </div>
+        <div class="container-fluid">© 2022 Copyright: <a href="" target="_blank"> Design Hub </a></div>
       </div>
       <!-- Copyright -->
     </footer>
