Modificando unas vistas

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -16,6 +16,7 @@
     }
     .rectangle {
       background-color: #ffb3b3;
+      border-radius: 50px;
       padding: 10px;
     }
     .rectangle:hover {
@@ -35,7 +36,7 @@
     <!-- Main Navigation -->
     <!-- Main Layout -->
     <main>
-      <div class="container-fluid mt-5 mt-md-0 mb-5">
+      <div class="container-fluid mt-5 mt-md-0 mb-5 border">
         <!-- Grid row -->
         <div class="row" style="margin-top: -100px">
           <!-- Grid column -->
@@ -113,13 +114,19 @@
                         <!-- Grid column -->
                         <div class="col-md-12 text-center">
                           <h4 class="text-center font-weight-bold dark-grey-text mt-3 mb-3">
-                            <strong>Share this post: </strong>
+                            <strong>Share this recipe with friends: </strong>
                           </h4>
-                          <button type="button" class="btn btn-fb btn-sm"><i class="fab fa-facebook-f left"></i> Facebook</button>
+                          <button type="button" class="btn btn-outline-primary btn-fb btn-sm">
+                            <i class="fab fa-facebook-f left"></i> Facebook
+                          </button>
                           <!-- Twitter -->
-                          <button type="button" class="btn btn-tw btn-sm"><i class="fab fa-twitter left"></i> Twitter</button>
+                          <button type="button" class="btn btn-outline-info btn-tw btn-sm">
+                            <i class="fab fa-twitter left"></i> Twitter
+                          </button>
                           <!-- Google + -->
-                          <button type="button" class="btn btn-gplus btn-sm"><i class="fab fa-google-plus-g left"></i> Google +</button>
+                          <button type="button" class="btn btn-outline-danger btn-gplus btn-sm">
+                            <i class="fab fa-google-plus-g left"></i> Google +
+                          </button>
                         </div>
                         <!-- Grid column -->
                       </div>
