--- a/templates/search.html
+++ b/templates/search.html
@@ -133,7 +133,7 @@
                <!-- Pagination -->
                
                <div class="text-center mt-5">
-                  <a href="http://127.0.0.1:8000/">Back Home</a>
+                  <a href="{% url 'home' %}">Back Home</a>
                </div>
             </section>
             <!--Section: Content-->
