User templates moved, and url created in home.jtml

--- a/templates/home.html
+++ b/templates/home.html
@@ -151,10 +151,10 @@ a.nav-link {
     </div>
     <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="btn btn-success" href="#" role="button">Inicia Sesion</a>
+          <a class="btn btn-success" href="{% url 'account_login' %}" role="button">Inicia Sesion</a>
         </li>
         <li class="nav-list-item">
-          <a class="btn btn-secondary" href="#" role="button">Registrarse</a>
+          <a class="btn btn-secondary" href="{% url 'account_signup' %}" role="button">Registrarse</a>
         </li>
     </ul>
 
