Añadiendo funcionalidad para hacer peticiones a la API EDAMAM

--- a/templates/home.html
+++ b/templates/home.html
@@ -150,6 +150,9 @@ a.nav-link {
         <a class="navbar-brand" href="#">NUTRI FOOD 🥕</a>
     </div>
     <ul class="nav-list">
+       <li class="nav-list-item">
+         <a class="btn btn-outline-danger" href="esp/" role="button">Ingrediente del mes</a>
+       </li>
         <li class="nav-list-item">
           <a class="btn btn-success" href="#" role="button">Inicia Sesion</a>
         </li>
