--- a/displayapi/templates/index.html
+++ b/displayapi/templates/index.html
@@ -1,23 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!-- CSS only -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-  />
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ingrediente del mes</title>
-  </head>
-  <body>
-    <h1>Ingrediente del mes</h1>
-    <h2>Chiken</h2>
-    {% for i in response %}
-    <strong>{{i.title}} ,</strong>
-    {% endfor %}
-  </body>
-</html>
+{% extends "base.html" %}
+{% load static %}
+<style>
+  .container {
+    background-color: #FAFBFD;
+    width: 15rem;
+    height: auto;
+    padding: 0.5rem;
+    border-radius: 4px;
+  }
+  i {
+    color: teal;
+    position: absolute;
+  }
+  .textbox {
+    padding: 0 1.3rem;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  
+  }
+  body {
+    padding: 2rem;
+    background-color: #dedede;
+  }
+</style>
+{% block content %}
+    {% load crispy_forms_tags %}
+    <div id = "container">
+      <div class="inner">
+        <form method="post">
+            <div class="form-groupform-control-lg">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit" value="Lookup" class="btn btn-success">
+            </div>
+        </form>
+      </div>
+        {% if response %}
+            {% if response.calories == 0 %}
+                <div class="alert alert-warning" role="alert">Ingredient not found try again</div>
+            {% else %}
+                <div class="inner">
+                    <div class="card position-absolute top-50 start-50 translate-middle" style="width: 20rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ ingredient }}</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Detail</h6>
+                            <div id="container">
+                                <span id="icon"> <i class="material-icons">local_fire_department</i></span>
+                                <span id="text">Calories: {{ response.calories }} kcal</span>
+                            </div>
+                            <div id="container">
+                                <span id="icon"> <i class="material-icons">scale</i></span>
+                                <span id="text">Portion: {{ response.totalWeight|truncatechars:5 }} g</span>
+                            </div>
+                            <div id="container">
+                                <span id="icon"> <i class="material-icons">kebab_dining</i></span>
+                                <span id="text">Fat: {{ response.totalNutrients.FAT.quantity|truncatechars:5 }} {{ response.totalNutrients.FAT.unit }}</span>
+                            </div>
+                            <div id="container">
+                                <span id="icon"> <i class="material-icons">bolt</i></span>
+                                <span id="text">Sugar: {{ response.totalNutrients.SUGAR.quantity|truncatechars:5 }} {{ response.totalNutrients.SUGAR.unit }}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+    {% endif %}
+{% endif %}
+{% endblock %}
