--- a/templates/home.html
+++ b/templates/home.html
@@ -145,37 +145,40 @@ a.nav-link {
 }
 
     </style>
-  <nav class="main-navigation">
-    <div class="navbar-header animated fadeInUp">
-        <a class="navbar-brand" href="#">NUTRI FOOD 🥕</a>
-    </div>
-    <ul class="nav-list">
-       <li class="nav-list-item">
-         <a class="btn btn-outline-danger" href="esp/" role="button">Ingrediente del mes</a>
-       </li>
-        <li class="nav-list-item">
-          <a class="btn btn-success" href="#" role="button">Inicia Sesion</a>
-        </li>
-        <li class="nav-list-item">
-          <a class="btn btn-secondary" href="#" role="button">Registrarse</a>
-        </li>
-    </ul>
 
-</nav>
    <body>
       <!-- Intro Section -->
       
       <div class="view jarallax" data-jarallax='{"speed": 0.2}'
          style="background-image: url('https://wallpaperaccess.com/full/1737971.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center ">
          <div class="mask rgba-indigo-light">
+            <nav class="main-navigation">
+               <div class="navbar-header animated fadeInUp">
+                   <a class="navbar-brand" href="#">NUTRI FOOD 🥕</a>
+               </div>
+               <ul class="nav-list">
+                  <li class="nav-list-item">
+                    <a class="btn " style="background-color: #dfe7ba;" href="esp/" role="button">My favorite ingredient</a>
+                  </li>
+                   <li class="nav-list-item">
+                    <a class="btn  " style="background-color: #ffab64;" href=" /accounts/login/" role="button">Sign in</a>
+                 </li>
+                 <li class="nav-list-item">
+                   <a class="btn " style="background-color: #ffab64;" href="/accounts/signup/" role="button">Sign up</a>
+                 </li>
+               </ul>
+           
+           </nav>
             <div class="container h-100 d-flex justify-content-center align-items-center">
                <div class="row">
                   <div class="col-md-12 wow fadeIn">
                      <div class="text-center white-text">
                         <ul class="list-unstyled">
                            <li>
+                              <label for="form51" class="text-white"></label>
                               <h1 class="display-4 font-weight-bold  wow fadeIn"
                                  data-wow-delay="0.3s">
+                                 
                                  <strong>Recipes and healthy diets app</strong>
                               </h1>
                            </li>
@@ -191,7 +194,7 @@ a.nav-link {
                                  <!-- Accordion card -->
                                  <div class="card">
                                     <!-- Card header -->
-                                    <div class="card-header" role="tab" id="headingOne1">
+                                    <div class="card-header"  style="background-color: #b4be88;" role="tab" id="headingOne1">
                                        <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
                                           aria-controls="collapseOne1">
                                           <h5 class="mb-0">
@@ -201,7 +204,7 @@ a.nav-link {
                                        </a>
                                     </div>
                                     <!-- Card body -->
-                                    <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
+                                    <div id="collapseOne1" class="collapse show" style="background:#b4be88" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
                                        <div class="card-body">
                                           <!-- Material checked -->
                                           <div class="form-check form-check-inline">
@@ -243,10 +246,11 @@ a.nav-link {
                               <!-- Accordion card -->
                               <li class="wow fadeIn" data-wow-delay="0.4s">
                                  <div class="md-form mb-0">
-                                    <input type="text" id="form51" class="form-control" name="search" placeholder="Search">
-                                    <label for="form51" class="text-white">Search</label>
+                                    <label for="form51" class="text-white"></label>
+                                    <input type="text" style="background-color: #dfe7ba;" id="form51" class="form-control" name="search" placeholder="Search">
+                                    <label for="form51" class="text-white"></label>
                                  </div>
-                                 <button class="btn btn-success btn-rounded btn-lg  font-weight-bold ml-lg-0" type="submit">
+                                 <button class="btn  btn-rounded btn-lg  font-weight-bold ml-lg-0" style="background-color: #b4be88;" type="submit">
                                  <i class="fas fa-search orange-text mr-2" aria-hidden="true"></i> Get Recipes</button>
                               </li>
                         </ul>
@@ -260,7 +264,7 @@ a.nav-link {
       <!-- Footer -->
       <footer class="page-footer text-center text-md-left unique-color-dark pt-0">
          <!-- Copyright -->
-         <div class="footer-copyright text-center py-3">
+         <div class="footer-copyright text-center py-3 ">
             <div class="container-fluid">
                © 2022 Copyright: <a href="#" target="_blank"> DesignHub </a>
             </div>
