--- a/templates/search.html
+++ b/templates/search.html
@@ -8,9 +8,9 @@
             <div class="row  pt-5 mt-3">
                <!-- Grid column -->
                <div class="col-md-12">
-                  <div class="card">
-                     <div class="card-body">
-                        <h3>{{query}}: {{total}} Result (s) Found.</h3>
+                  <div class="card" style="background-color: #ffab64">
+                     <div class="card-body" >
+                        <h3>{{query}} {{total}} Result (s) Found.</h3>
                      </div>
                   </div>
                </div>
@@ -133,7 +133,7 @@
                <!-- Pagination -->
                
                <div class="text-center mt-5">
-                  <a href="{% url 'home' %}">Back Home</a>
+                  <a class="btn" style="background-color: #ffab64" href="{% url 'home' %}">Back Home</a>
                </div>
             </section>
             <!--Section: Content-->
