--- a/main/templates/main/search.html
+++ b/main/templates/main/search.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  {% include 'head.html' %}
+{% extends "main/base.html" %}
+{% block content %}
    <body style="min-height:800px;background-image: url(https://wallpaperaccess.com/full/1189794.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
       <div class="mask rgba-gradient7">
          <div class="container h-100 d-flex justify-content-center align-items-center">
@@ -140,6 +139,5 @@
          </div>
       </div>
       <!-- Main Navigation -->
-      {% include 'scripts.html' %}
    </body>
-</html>
+   {% endblock %}
