--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport"
               content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <title>{{ title }}</title>
+        <title>{% block head_title %}{% endblock %}/title>
         <!-- Font Awesome -->
         <link rel="stylesheet"
               href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"/>
@@ -18,17 +18,15 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
         <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" />
         <link rel="stylesheet" href="{% static 'css/style.min.css' %}" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
-
-    
-    {% include "main/navbar.html" %}
-    {% block content %}
-    {% endblock %}
-    {% include "main/footer.html" %}
-    
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/mdb.min.js' %}"></script>
-
+    <body>
+        {% include "main/navbar.html" %}
+        {% block content %}{% endblock content %}
+        {% include "main/footer.html" %}
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/popper.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/mdb.min.js' %}"></script>
+    </body>
 </html>
