--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,9 +1,9 @@
    {% extends "main/base.html" %}
 
+   {% block head_title %}{% trans "Home" %}{% endblock %}
    {% block content %}
-   <body>
       <!-- Intro Section -->
-      
+      {% load static %}
       <div class="view jarallax" data-jarallax='{"speed": 0.2}'
          style="background-image: url('https://wallpaperaccess.com/full/1737971.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center ">
          <div class="mask rgba-indigo-light">
@@ -109,6 +109,4 @@
            $('.mdb-select').material_select();
          });
       </script>
-   </body>
    {% endblock %}
-</html>
