--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,6 +1,6 @@
    {% extends "main/base.html" %}
 
-   {% block head_title %}{% trans "Home" %}{% endblock %}
+   {% block head_title %}Home{% endblock %}
    {% block content %}
       <!-- Intro Section -->
       {% load static %}
