Modificando diseño de la app

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -6,8 +6,7 @@
       {% load static %}
       <div class="view jarallax" data-jarallax='{"speed": 0.2}'
          style="background-image: url('https://wallpaperaccess.com/full/1737971.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center ">
-         <div class="mask rgba-indigo-light">
-            
+         <div class="mask rgba-grey-strong">
             <div class="container h-100 d-flex justify-content-center align-items-center">
                <div class="row">
                   <div class="col-md-12 wow fadeIn">
