--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -1,192 +1,203 @@
 {% extends "main/base.html" %}
-  <style>
-    li {
-      font-size: 0.95rem;
-      line-height: 1.7rem;
-    }
-    .circle {
-      background-color: #dfe7ba;
-      border-radius: 50px;
-      padding: 10px;
-    }
-    .rectangle {
-      background-color: #ffab64;
-      border-radius: 50px;
-      padding: 10px;
-    }
-    .center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
-  </style>
-  {% block content %}
-  <body>
-    <!-- Main Navigation -->
-    <header>
-      <section>
-        <div class="" style="max-height: 150px">
-          <img src="{{'https://wallpaperaccess.com/full/1737971.jpg'}}" style="width: 100%" />
-        </div>
-      </section>
-    </header>
-    <!-- Main Navigation -->
-    <!-- Main Layout -->
-    <main>
-      <div class="container-fluid mt-5 mt-md-0 mb-5 border">
-        <!-- Grid row -->
-        <div class="row" style="margin-top: -100px">
-          <!-- Grid column -->
-          <div class="col-md-12 px-lg-5">
-            <!-- Card -->
-            <div class="card pb-5 mx-md-3">
-              <h1 style="color: #ffab64">#{{response.title}}</h1>
+<style>
+  li {
+    font-size: 0.95rem;
+    line-height: 1.7rem;
+  }
+  .circle {
+    background-color: #dfe7ba;
+    border-radius: 50px;
+    padding: 10px;
+  }
+  .rectangle {
+    background-color: #ffab64;
+    border-radius: 50px;
+    padding: 10px;
+  }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+</style>
+{% block content %}
+<body>
+  <!-- Main Navigation -->
 
-              <div class="card-body">
-                <div class="container">
-                  <!-- Section heading -->
-                  <img src="{{response.image}}" style="width: 25%" class="center" />
-                  <h1 class="text-center h1 pt-4 mb-3">
-                    <strong>{{recipe.title}}</strong>
-                  </h1>
-                  <div class="row">
-                    <div class="col-md-12 col-xl-12 d-flex justify-content-center">
-                      <div class="d-inline">
-                        <label for="calories">Calories</label>
-                        <span id="calories" class="border circle">{{response.calories}} cal</span>
-                      </div>
+  <!-- Main Navigation -->
+  <!-- Main Layout -->
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <main>
+    <div class="container-fluid mt-5 mt-md-0 mb-5 border">
+      <!-- Grid row -->
+      <div class="row" style="margin-top: -100px">
+        <!-- Grid column -->
+        <div class="col-md-12 px-lg-5">
+          <!-- Card -->
+          <div class="card pb-5 mx-md-3 center">
+            <h1 style="color: #ffab64">{{response.title}}</h1>
 
+            <div class="card-body">
+              <div class="container">
+                <!-- Section heading -->
+                <img src="{{response.image}}" style="width: 25%" class="center" />
+                <h1 class="text-center h1 pt-4 mb-3">
+                  <strong>{{recipe.title}}</strong>
+                </h1>
+                <div class="row">
+                  <div class="col-md-12 col-xl-12 d-flex justify-content-center">
+                    <div class="d-inline">
+                      <label for="calories">Calories</label>
+                      <span id="calories" class="border circle">{{response.calories}} cal</span>
+                    </div>
 
-                      <div class="d-inline">
-                        <label for="fat" class="mx-2">Fat</label>
-                        <span id="fat" class="border circle">{{response.fat}} </span>
-                      </div>
+                    <div class="d-inline">
+                      <label for="fat" class="mx-2">Fat</label>
+                      <span id="fat" class="border circle">{{response.fat}} </span>
+                    </div>
 
-                      <div class="d-inline">
-                        <label for="protein" class="mx-2">Protein</label>
-                        <span id="protein" class="border circle">{{response.protein}} </span>
-                      </div>
+                    <div class="d-inline">
+                      <label for="protein" class="mx-2">Protein</label>
+                      <span id="protein" class="border circle">{{response.protein}} </span>
                     </div>
                   </div>
-                  <hr />
-                  <div class="row">
-                    <div class="col-md-12 col-xl-12 d-flex justify-content-center">
-                      <div class="d-inline">
-                        <label for="calories">Prep:</label>
-                        <span id="calories" class="border rectangle">{{response.readyInMinutes}} mins</span>
-                      </div>
-                      <div class="d-inline">
-                        <label for="carbs" class="mx-2">Servings:</label>
-                        <span id="carbs" class="border rectangle">{{response.servings}}</span>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- Grid row -->
-                  <div class="row row pt-lg-5 pt-3">
-                    <!-- Grid column -->
-                    <div class="col-md-12 col-xl-12">
-                      <!-- Grid row -->
-                      <!---------------------------------------------------------------------------------------------------->
-                      <p>{{recipe.description|safe}}</p>
-                      <div class="row">
-                        <div class="col-md-6 col-lg-6 col-xl-6 col-sm-12 col-xs-12">
-                          <div class="jumbotron" style="background-color: #dfe7ba">
-                            <h1>Ingredients:</h1>
-                            <ul class="list-group">
-                              {% for ingredient in response.extendedIngredients %}
-                            
-                              <li class="list-group-item d-flex justify-content-between align-items-center">{{ ingredient.original }}</li>
-                              <div class="image-parent">
-                                <img src="https://spoonacular.com/cdn/ingredients_100x100/{{ ingredient.image }}" style="width: 15%; height:auto">
-                              </div>
-                              {% endfor %}
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="col-md-6 col-lg-6 col-xl-6 col-sm-12 col-xs-12">
-                          <div class="jumbotron" style="background-color: #dfe7ba">
-                            <h1>Directions:</h1>
-                            <ol class="list-group list-group-numbered">
-                              {% for step in response.analyzedInstructions.0.steps %}
-                              <li class="list-group-item">{{ step.step }}</li>
-                              {% endfor %}
-                            </ol>
-                          </div>
-                        </div>
-                      </div>
-                      <!---------------------------------------------------------------------------------------------------->
-                      <!-- Grid row -->
-                      <div class="row my-5">
-                        <!-- Grid column -->
-                        <div class="col-md-12 text-center">
-                          <h4 class="text-center font-weight-bold dark-grey-text mt-3 mb-3">
-                            <strong>Share this recipe with friends: </strong>
-                          </h4>
-                          <button type="button" class="btn btn-outline-primary btn-fb btn-sm">
-                            <i class="fab fa-facebook-f left"></i> Facebook
-                          </button>
-                          <!-- Twitter -->
-                          <button type="button" class="btn btn-outline-info btn-tw btn-sm">
-                            <i class="fab fa-twitter left"></i> Twitter
-                          </button>
-                          <!-- Google + -->
-                          <button type="button" class="btn btn-outline-danger btn-gplus btn-sm">
-                            <i class="fab fa-google-plus-g left"></i> Google +
-                          </button>
-                        </div>
-                        <div class="text-center mt-5 center">
-                          <a class="btn" style="background-color: #ffab64" href="{% url 'home' %}">Back Home</a>
-                        </div>
-                        <!-- Grid column -->
-                      </div>
-                      <!-- Grid row -->
-                      <hr class="mt-5" />
-                      <!-- Section: Leave a reply (Not Logged In User) -->
-                    </div>
-                    <!-- Grid column -->
-                  </div>
-                  <!-- Grid row -->
                 </div>
+                <hr />
+                <div class="row">
+                  <div class="col-md-12 col-xl-12 d-flex justify-content-center">
+                    <div class="d-inline">
+                      <label for="calories">Prep:</label>
+                      <span id="calories" class="border rectangle">{{response.readyInMinutes}} mins</span>
+                    </div>
+                    <div class="d-inline">
+                      <label for="carbs" class="mx-2">Servings:</label>
+                      <span id="carbs" class="border rectangle">{{response.servings}}</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Grid row -->
+                <div class="row row pt-lg-5 pt-3">
+                  <!-- Grid column -->
+                  <div class="col-md-12 col-xl-12">
+                    <!-- Grid row -->
+                    <!---------------------------------------------------------------------------------------------------->
+                    <p>{{recipe.description|safe}}</p>
+                    <div class="row">
+                      <div class="col-md-6 col-lg-6 col-xl-6 col-sm-12 col-xs-12">
+                        <div class="jumbotron" style="background-color: #dfe7ba">
+                          <h1>Ingredients:</h1>
+                          <ul class="list-group">
+                            {% for ingredient in response.extendedIngredients %}
+
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                              {{ ingredient.original }}
+                              <div class="image-parent">
+                                <img
+                                  src="https://spoonacular.com/cdn/ingredients_100x100/{{ ingredient.image }}"
+                                  style="width: 50%; height: auto"
+                                />
+                              </div>
+                            </li>
+
+                            {% endfor %}
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="col-md-6 col-lg-6 col-xl-6 col-sm-12 col-xs-12">
+                        <div class="jumbotron" style="background-color: #dfe7ba">
+                          <h1>Directions:</h1>
+                          <ol class="list-group list-group-numbered">
+                            {% for step in response.analyzedInstructions.0.steps %}
+                            <li class="list-group-item">{{ step.step }}</li>
+                            {% endfor %}
+                          </ol>
+                        </div>
+                      </div>
+                    </div>
+                    <!---------------------------------------------------------------------------------------------------->
+                    <!-- Grid row -->
+                    <div class="row my-5">
+                      <!-- Grid column -->
+                      <div class="col-md-12 text-center">
+                        <h4 class="text-center font-weight-bold dark-grey-text mt-3 mb-3">
+                          <strong>Share this recipe with friends: </strong>
+                        </h4>
+                        <!-- Load Facebook SDK for JavaScript -->
+                        <div id="fb-root"></div>
+                        <script>
+                          (function (d, s, id) {
+                            var js,
+                              fjs = d.getElementsByTagName(s)[0];
+                            if (d.getElementById(id)) return;
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
+                            fjs.parentNode.insertBefore(js, fjs);
+                          })(document, 'script', 'facebook-jssdk');
+                        </script>
+
+                        <!-- Your share button code -->
+                        <div class="fb-share-button" data-href="/diets/detail/{{ recipe.id }}" data-layout="button_count"></div>
+                        <!-- Twitter -->
+
+                        <!-- Google + -->
+                      </div>
+                      <div class="text-center mt-5">
+                        <a class="btn" style="background-color: #ffab64" href="{% url 'home' %}">Back Home</a>
+                      </div>
+                      <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                    <hr class="mt-5" />
+                    <!-- Section: Leave a reply (Not Logged In User) -->
+                  </div>
+                  <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
               </div>
             </div>
-            <!-- Card -->
           </div>
-          <!-- Grid column -->
+          <!-- Card -->
         </div>
-        <!-- Grid row -->
+        <!-- Grid column -->
       </div>
-    </main>
-    <!-- Main Layout -->
-    <!-- Footer -->
-    <footer class="page-footer text-center text-md-left unique-color-dark pt-0">
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">
-        <div class="container-fluid">© 2022 Copyright: <a href="" target="_blank"> Design Hub </a></div>
-      </div>
-      <!-- Copyright -->
-    </footer>
-    <!-- SCRIPTS -->
-    <script>
-      new WOW().init();
+      <!-- Grid row -->
+    </div>
+  </main>
 
-      $(function () {
-        var selectedClass = '';
-        $('.filter').click(function () {
-          selectedClass = $(this).attr('data-rel');
-          $('#gallery').fadeTo(100, 0.1);
-          $('#gallery div')
-            .not('.' + selectedClass)
-            .fadeOut()
-            .removeClass('animation');
-          setTimeout(function () {
-            $('.' + selectedClass)
-              .fadeIn()
-              .addClass('animation');
-            $('#gallery').fadeTo(300, 1);
-          }, 300);
-        });
+  <!-- Main Layout -->
+  <!-- Footer -->
+  <footer class="page-footer text-center text-md-left unique-color-dark pt-0">
+    <!-- Copyright -->
+
+    <!-- Copyright -->
+  </footer>
+  <!-- SCRIPTS -->
+  <script>
+    new WOW().init();
+
+    $(function () {
+      var selectedClass = '';
+      $('.filter').click(function () {
+        selectedClass = $(this).attr('data-rel');
+        $('#gallery').fadeTo(100, 0.1);
+        $('#gallery div')
+          .not('.' + selectedClass)
+          .fadeOut()
+          .removeClass('animation');
+        setTimeout(function () {
+          $('.' + selectedClass)
+            .fadeIn()
+            .addClass('animation');
+          $('#gallery').fadeTo(300, 1);
+        }, 300);
       });
-    </script>
-  </body>
-  {% endblock %}
+    });
+  </script>
+</body>
+{% endblock %}
