--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -1,186 +1,173 @@
 <style>
-    html,
-    body,
-    header,
-    .jarallax {
+  html,
+  body,
+  header,
+  .jarallax {
     height: 1000px;
     min-height: 800px;
+  }
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  a.navbar-brand {
+    float: left;
+    height: 0px;
+    padding: 10px 10px;
+    font-size: 25px;
+    line-height: 0px;
+    text-decoration: none;
+    color: orangered;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+  }
+
+  nav.main-navigation {
+    position: relative;
+  }
+
+  nav.main-navigation ul.nav-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    position: relative;
+    text-align: right;
+  }
+
+  .nav-list li.nav-list-item {
+    display: inline-block;
+    line-height: 40px;
+    margin-left: 30px;
+    margin-top: 15px;
+  }
+
+  a.nav-link {
+    text-decoration: none;
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    color: #404040;
+  }
+
+  @keyframes FadeIn {
+    0% {
+      opacity: 0;
+      -webkit-transition-duration: 0.8s;
+      transition-duration: 0.8s;
+      -webkit-transform: translateY(-10px);
+      -ms-transform: translateY(-10px);
+      transform: translateY(-10px);
     }
-    body {
-margin: 0;
-padding: 0;
-}
 
-a.navbar-brand {
-float: left;
-height: 0px;
-padding: 10px 10px;
-font-size: 25px;
-line-height: 0px;
-text-decoration: none;
-color: orangered;
-font-family: 'Roboto', sans-serif;
-font-weight: 700;
-}
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      transform: translateY(0);
+      pointer-events: auto;
+      transition: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
 
-nav.main-navigation {
-position: relative;
+  .nav-list li {
+    animation: FadeIn 1s cubic-bezier(0.65, 0.05, 0.36, 1);
+    animation-fill-mode: both;
+  }
 
-}
+  .nav-list li:nth-child(1) {
+    animation-delay: 0.3s;
+  }
 
-nav.main-navigation ul.nav-list {
-margin: 0;
-padding: 0;
-list-style: none;
-position: relative;
-text-align: right;
-}
+  .nav-list li:nth-child(2) {
+    animation-delay: 0.6s;
+  }
 
-.nav-list li.nav-list-item {
-display: inline-block;
-line-height: 40px;
-margin-left: 30px;
-margin-top: 15px;
-}
+  .nav-list li:nth-child(3) {
+    animation-delay: 0.9s;
+  }
 
-a.nav-link {
-text-decoration: none;
-font-size: 18px;
-font-family: sans-serif;
-font-weight: 500;
-cursor: pointer;
-position: relative;
-color: #404040;
-}
+  .nav-list li:nth-child(4) {
+    animation-delay: 1.2s;
+  }
 
-@keyframes FadeIn {
-0% {
- opacity: 0;
- -webkit-transition-duration: 0.8s;
- transition-duration: 0.8s;
- -webkit-transform: translateY(-10px);
- -ms-transform: translateY(-10px);
- transform: translateY(-10px);
-}
+  .nav-list li:nth-child(5) {
+    animation-delay: 1.5s;
+  }
 
-100% {
- opacity: 1;
- -webkit-transform: translateY(0);
- -ms-transform: translateY(0);
- transform: translateY(0);
- pointer-events: auto;
- transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-}
+  /* Animation */
 
-.nav-list li {
-animation: FadeIn 1s cubic-bezier(0.65, 0.05, 0.36, 1);
-animation-fill-mode: both;
-}
+  @keyframes fadeInUp {
+    from {
+      transform: translate3d(0, 40px, 0);
+    }
 
-.nav-list li:nth-child(1) {
-animation-delay: 0.3s;
-}
+    to {
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
+    }
+  }
 
-.nav-list li:nth-child(2) {
-animation-delay: 0.6s;
-}
+  @-webkit-keyframes fadeInUp {
+    from {
+      transform: translate3d(0, 40px, 0);
+    }
 
-.nav-list li:nth-child(3) {
-animation-delay: 0.9s;
-}
+    to {
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
+    }
+  }
 
-.nav-list li:nth-child(4) {
-animation-delay: 1.2s;
-}
+  .animated {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+  }
 
-.nav-list li:nth-child(5) {
-animation-delay: 1.5s;
-}
+  .animatedFadeInUp {
+    opacity: 0;
+  }
 
-/* Animation */
-
-@keyframes fadeInUp {
-from {
- transform: translate3d(0, 40px, 0);
-}
-
-to {
- transform: translate3d(0, 0, 0);
- opacity: 1;
-}
-}
-
-@-webkit-keyframes fadeInUp {
-from {
- transform: translate3d(0, 40px, 0);
-}
-
-to {
- transform: translate3d(0, 0, 0);
- opacity: 1;
-}
-}
-
-.animated {
-animation-duration: 1s;
-animation-fill-mode: both;
--webkit-animation-duration: 1s;
--webkit-animation-fill-mode: both;
-}
-
-.animatedFadeInUp {
-opacity: 0;
-}
-
-.fadeInUp {
-opacity: 0;
-animation-name: fadeInUp;
--webkit-animation-name: fadeInUp;
-}
-
+  .fadeInUp {
+    opacity: 0;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
+  }
 </style>
 {% load static %}
-<nav class="main-navigation">
-        <a class="navbar-brand animated fadeInUp" href="/"> <img alt="NUTRI FOOD 🥕" src="{% static 'img/nutrifoodlogo.png' %}"
-            width="8%" height="auto" /></a>
-    <ul class="nav-list">
+
+<div class="navbar-dark mask">
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarTogglerDemo03"
+      aria-controls="navbarTogglerDemo03"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a href="/"> <img alt="NUTRI FOOD 🥕" src="{% static 'img/nutrifoodlogo.png' %}" width=90" height="auto"> </a>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-list-item">
-            <a class="btn "
-               style="background-color: #dfe7ba;"
-               href="/esp/"
-               role="button">My favorite ingredient</a>
+          <a class="btn" style="background-color: #dfe7ba" href="/esp/" role="button">My favorite ingredient</a>
         </li>
         <li class="nav-list-item">
-            <a class="btn "
-               style="background-color: #dfe7ba;"
-               href="/diets/mydiet"
-               role="button">Todays Food</a>
+          <a class="btn" style="background-color: #dfe7ba" href="/diets/mydiet" role="button">Todays Food</a>
         </li>
-        {% if request.user.is_authenticated %}
-        <li class="nav-list-item">
-            <a class="btn "
-               style="background-color: #ffab64;"
-               href="/logout/"
-               role="button">Log out</a>
-        </li>
-        <li class="nav-list-item">
-        <a class="material-icons " style = "color: #dfe7ba; font-size: 50px " href = "/users/profile/">account_circle</a>
-        </li>
-            
-        {% else %}
-        <li class="nav-list-item">
-            <a class="btn  "
-               style="background-color: #ffab64;"
-               href=" /login/"
-               role="button">Sign in</a>
-        </li>
-        <li class="nav-list-item">
-            <a class="btn "
-               style="background-color: #ffab64;"
-               href="/signup/"
-               role="button">Sign up</a>
-        </li>
-        {% endif %}
-    </ul>
-</nav>
+      </ul>
+
+      <a class="btn" style="background-color: #ffab64" href=" /login/" role="button">Sign in</a>
+      <a class="btn" style="background-color: #ffab64" href="/signup/" role="button">Sign up</a>
+    </div>
+  </nav>
+</div>
