Reparando vista home, search, detalles y api

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -22,7 +22,7 @@
                            </li>
                            <li>
                               <h5 class=" description mb-5 wow fadeIn" data-wow-delay="0.4s">
-                                 Search for healthy recipes | {{total_recipes}}  recipes
+                                 Search for healthy recipes | {{query}} {{total_recipes}}  recipes
                               </h5>
                            </li>
                            <hr>
