--- a/main/templates/main/search.html
+++ b/main/templates/main/search.html
@@ -34,10 +34,11 @@
           {% for recipe in response %}
           <!-- Grid column -->
           <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
+            <br />
             <!-- Card -->
             <div class="card hoverable">
               <!-- Card image -->
-              <img class="card-img-top" src="{{recipe.image}}" alt="Card image cap" />
+              <img class="card-img-top" src="{{recipe.image}}" style="width: 100%; height: 100%" alt="Card image cap" />
               <!-- Card content -->
               <div class="card-body">
                 <!-- Title -->
