--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -1,4 +1,3 @@
-{% extends "main/base.html" %}
 <style>
   li {
     font-size: 0.95rem;
@@ -21,7 +20,7 @@
     width: 50%;
   }
 </style>
-{% block content %}
+{% extends "main/base.html" %} {% block content %}
 <body>
   <!-- Main Navigation -->
 
@@ -37,17 +36,15 @@
       <!-- Grid row -->
       <div class="row" style="margin-top: -100px">
         <!-- Grid column -->
-        <div class="col-md-12 px-lg-5">
+        <div class="col-md-12 px-lg-8">
           <!-- Card -->
-          <div class="card pb-5 mx-md-3 center">
-            <h1 style="color: #ffab64">{{response.title}}</h1>
-
+          <div class="card pb-5 mx-md-6 center">
             <div class="card-body">
               <div class="container">
                 <!-- Section heading -->
-                <img src="{{response.image}}" style="width: 25%" class="center" />
+                <img src="{{response.image}}" style="width: 40%" class="center" />
                 <h1 class="text-center h1 pt-4 mb-3">
-                  <strong>{{recipe.title}}</strong>
+                  <strong style="color: #ffab64">{{response.title}}</strong>
                 </h1>
                 <div class="row">
                   <div class="col-md-12 col-xl-12 d-flex justify-content-center">
@@ -142,7 +139,11 @@
                         </script>
 
                         <!-- Your share button code -->
-                        <div class="fb-share-button" data-href="/diets/detail/{{ recipe.id }}" data-layout="button_count"></div>
+                        <div
+                          class="fb-share-button"
+                          data-href="https://34.125.211.153/diets/detail/{{ recipe.id }}"
+                          data-layout="button_count"
+                        ></div>
                         <!-- Twitter -->
 
                         <!-- Google + -->
