--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -158,11 +158,12 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-list-item">
-          <a class="btn" style="background-color: #dfe7ba" href="/esp/" role="button">My favorite ingredient</a>
+        <li class="nav-item">
+          <a class="nav-link" href="/esp/">My favorite ingredient </a>
         </li>
-        <li class="nav-list-item">
-          <a class="btn" style="background-color: #dfe7ba" href="/diets/mydiet" role="button">Todays Food</a>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/diets/mydiet">Todays Food</a>
         </li>
       </ul>
 
