--- a/main/templates/main/search.html
+++ b/main/templates/main/search.html
@@ -33,19 +33,19 @@
         <div class="row">
           {% for recipe in response %}
           <!-- Grid column -->
-          <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
+          <div class="col-lg-4 col-md-12 mb-lg-6 mb-6">
             <br />
             <!-- Card -->
             <div class="card hoverable">
               <!-- Card image -->
-              <img class="card-img-top" src="{{recipe.image}}" style="width: 100%; height: 100%" alt="Card image cap" />
+              <img class="card-img-top" src="{{recipe.image}}" style="width: 100%; height: auto" alt="Card image cap" />
               <!-- Card content -->
               <div class="card-body">
                 <!-- Title -->
                 <h5 href="/diets/detail/{{ recipe.id }}" class="text-dark">{{ recipe.title }}</h5>
                 <!-- Text -->
-                <p class="card-title text-muted font-small mt-3 mb-2">{{recipe.summary|safe|slice:":150"}}</p>
-                <a type="button" class="btn btn-flat text-primary p-0 mx-0" href="/diets/detail/{{ recipe.id }}"
+                <p class="card-title text-muted font-small mt-3 mb-2">{{recipe.summary|safe|slice:":100"}}</p>
+                <a type="button" class="btn btn-primary mx-0" href="/diets/detail/{{ recipe.id }}"
                   >Read more<i class="fa fa-angle-right ml-2"></i
                 ></a>
               </div>
